# Python_Web

./: README.md  pyproject.toml
DZ_1/-CorePython-command-project-main/user_assistant/: main.py
DZ_2/-CorePython-command-project-main/: Dockerfile  pyproject.toml
DZ_2/-CorePython-command-project-main/user_assistant/: command_enum.py  utils.py
DZ_2/-CorePython-command-project-main/user_assistant/handlers/: abstract_handler.py  handler_factory.py  input_value.py
DZ_3/: DZ3_2.py  file_parser.py  main.py  normalize.py
DZ_4/: Dockerfile  main.py  pyproject.toml  socket_client.py  socket_server.py
DZ_4/storage/: data.json
DZ_4/templates/: error.html  index.html  message.html
DZ_5/: main.py  pyproject.toml
DZ_6/: pyproject.toml
DZ_6/DZ_SQLite/: example.db  main.py
DZ_6/DZ_SQLite/Query/: query_1.sql  query_10 .sql  query_2.sql  query_3.sql  query_4.sql  query_5 .sql  query_6 .sql  query_7.sql  query_9.sql
DZ_6/Lessons/: connect.py  create-tables.sql  create.py  insert.py  main.py  migration.py  update.py
DZ_7/: alembic.ini  main.py  pyproject.toml
DZ_7/app/data/: seed.py
DZ_7/app/models/: models.py
DZ_7/app/queries/: my_select.py
DZ_7/migration/versions/: 4399c1103891_init.py  58a041930aad_init.py  92ed32ed1aa1_init.py  de1dbe54c289_init.py  ef9ec2e1f502_init.py
DZ_8/: pyproject.toml
DZ_8/Part1/: main.py
DZ_8/Part1/app/models/: author.py  quote.py
DZ_8/Part2/: consumer.py  models.py  producer.py
DZ_9/: main.py  pyproject.toml
DZ_9/app/models/: quote.py
DZ_9/app/utils/: loader.py
DZ_9/data/: authors.json
(+34 files in other folders)
