[tool.poetry]
name = "dz-7"
version = "0.1.0"
description = ""
authors = ["retOK1986 <retOK@i.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
